--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/number-input": "^2.1.2",
+    "@chakra-ui/react": "^3.30.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/material": "^7.3.5",
+    "@mui/material": "^7.3.6",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
+    "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.6"
   },
   "devDependencies": {
